--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
-    background-color: aliceblue;
+    background-color: purple;
 }
 
 h1 {
-    background-color: pink;
+    background-color: chartreuse;
 }
